--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-responsive-animate-navbar": "^1.1.8",
     "react-router-dom": "^5.3.1",
     "react-scripts": "2.1.3",
+    "react-select": "^5.3.2",
     "react-starfield-animation": "^1.0.1",
     "responsive-navbar-react": "^1.2.1",
     "truffle": "5.0.5",
