addded backedn logic of the battle part

--- a/src/settings.json
+++ b/src/settings.json
@@ -1,3 +1,5 @@
 {
-    "SERVER_URL":"https://httpbin.org/post"
+    "STORE_DECK_URL":"http://54.165.242.195:5000/store",
+    "GET_DECK_URL":"http://54.165.242.195:5000/deck",
+    "BATTLE_URL":"http://54.165.242.195:5000/battle"
 }
