--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@metamask/detect-provider": "^1.2.0",
     "@openzeppelin/contracts": "^4.6.0",
     "@truffle/hdwallet-provider": "^2.0.8",
+    "axios": "^0.27.2",
+    "axios-retry": "^3.2.5",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -18,6 +20,7 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "mdb-react-ui-kit": "^1.3.0",
     "mdb-ui-kit": "^3.9.0",
